--- a/todo-liste.html
+++ b/todo-liste.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>TODO Liste</h1>
+    <ul id="todo-list">
+        <!-- TODO items will be inserted here dynamically -->
+    </ul>
 
     <script src="todo.js"></script>
 </body>
