Add basic error handling for POST.

--- a/todo-liste.html
+++ b/todo-liste.html
@@ -8,6 +8,8 @@
 <body>
     <h1>TODO Liste</h1>
 
+    <div id="error-message" style="color:red;"></div>
+
     <form id="todo-form">
         <input type="text" id="todo-input" placeholder="Neue Aufgabe hinzufügen">
         <button type="submit">Hinzufügen</button>
