--- a/todo-liste.html
+++ b/todo-liste.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO Liste</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Doto:wght@100..900" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
@@ -32,6 +35,9 @@
     </form>
 
     <a href="https://www.startpage.com/" target="_blank">Suchmaschine</a>
+    <a href="https://www.duckduckgo.com/" target="_blank">Duckduckgo</a>
+    <a href="https://www.bettersearch.com/" target="_blank">Bettersearch</a>
+
     <script>
         let link = document.querySelector("a");
         link.addEventListener("click", function(event) {
