--- a/todo-liste.html
+++ b/todo-liste.html
@@ -17,6 +17,7 @@
     <div id="description" class="blue-background">
         <h2>Beschreibung der <span>TODO-Liste</span></h2>
         <p>Hier stehen unsere Todos und die können bearbeitet werden.</p>
+        <p>Sed facilisis, lacus eu blandit vulputate, nulla turpis vehicula ex, vitae facilisis ex odio eu est. Interdum et malesuada fames ac ante ipsum primis in faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed vel metus bibendum, sagittis turpis eu, consequat ante. Donec sollicitudin risus neque, eu lacinia lorem rhoncus ut. Mauris ut orci nunc. Pellentesque posuere laoreet massa, id mattis leo blandit vel.</p>
     </div>
 
     <form id="todo-form" class="blue-background">
@@ -26,6 +27,7 @@
 
     <ul id="todo-list">
         <!-- TODO items will be inserted here dynamically -->
+        <li>Ein Todo</li>
     </ul>
 
     <form id="todo-update-form" style="display: none;">
