Adding an image and a video.

--- a/todo-liste.html
+++ b/todo-liste.html
@@ -40,6 +40,18 @@
     <a href="https://www.duckduckgo.com/" target="_blank">Duckduckgo</a>
     <a href="https://www.bettersearch.com/" target="_blank">Bettersearch</a>
 
+    <br>
+    <br>
+
+    <img src="https://www.sleep365.com/cdn/shop/articles/cat_nap_1.png" alt="Katze beim Schlummern" class="image-example">
+
+    <br><br>
+
+    <video controls class="video-example" id="cat-video">
+        <source src="videos/cat.mp4" type="video/mp4">
+        Ihr Browser unterstützt das Video-Tag nicht.
+    </video>
+
     <script>
         let link = document.querySelector("a");
         link.addEventListener("click", function(event) {
