Add example for combinators.

--- a/todo-liste.html
+++ b/todo-liste.html
@@ -52,6 +52,16 @@
         Ihr Browser unterstützt das Video-Tag nicht.
     </video>
 
+    <br><br>
+
+    <div class="parent">
+        <div class="child">Child Example</div>
+    </div>
+    <div class="sibling-1">Sibling 1</div>
+    <div class="sibling-2">Sibling 2</div>
+
+    <br><br>
+
     <script>
         let link = document.querySelector("a");
         link.addEventListener("click", function(event) {
