--- a/todo-liste.html
+++ b/todo-liste.html
@@ -62,6 +62,10 @@
 
     <br><br>
 
+    <p class="pseudo">Pseudo-Element Beispiel</p>
+
+    <br><br>
+
     <script>
         let link = document.querySelector("a");
         link.addEventListener("click", function(event) {
