--- a/todo-liste.html
+++ b/todo-liste.html
@@ -66,6 +66,10 @@
 
     <br><br>
 
+    <div class="overflow-box">Overflow: hidden with some more text...</div>
+
+    <br><br>
+
     <script>
         let link = document.querySelector("a");
         link.addEventListener("click", function(event) {
