Added examples for box modell and element positions.

--- a/todo-liste.html
+++ b/todo-liste.html
@@ -43,6 +43,12 @@
     <br>
     <br>
 
+    <div class="pos static-pos">Static</div>
+    <div class="pos relative-pos">Relative</div>
+    <div class="pos absolute-pos">Absolute</div>
+    <div class="pos fixed-pos">Fixed</div>
+    <div class="pos sticky-pos">Sticky</div>
+
     <img src="https://www.sleep365.com/cdn/shop/articles/cat_nap_1.png" alt="Katze beim Schlummern" class="image-example">
 
     <br><br>
