--- a/todo-liste.html
+++ b/todo-liste.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.css" rel="stylesheet">
     <title>TODO Liste</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
         <button type="submit">Hinzufügen</button>
     </form>
 
-    <ul id="todo-list">
+    <ul id="todo-list" class="todo-list">
         <!-- TODO items will be inserted here dynamically -->
     </ul>
 
