--- a/todo-liste.html
+++ b/todo-liste.html
@@ -13,7 +13,7 @@
 
     <form id="todo-form">
         <input type="text" id="todo-input" placeholder="Neue Aufgabe hinzufügen">
-        <button type="submit">Hinzufügen</button>
+        <button type="submit" class="add-button">Hinzufügen</button>
     </form>
 
     <ul id="todo-list" class="todo-list">
@@ -23,7 +23,7 @@
     <form id="todo-update-form" style="display: none;">
         <input type="hidden" id="todo-id">
         <input type="text" id="todo-update-input">
-        <button type="submit">Update</button>
+        <button type="submit" class="add-button">Update</button>
     </form>
 
     <script src="todo.js"></script>
